# picox

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Readme.md  mod_picox.cmake  picox.pro
doc/: Doxyfile
docs/: gh-pages.doxygen  styleguide.md
docs/porting_guide/: spiffs_porting_guide.md
picox/: xconfig.h  xconfig.md
picox/allocator/: xfalloc.c  xfalloc.h  xfixed_allocator.c  xfixed_allocator.h  xfixed_memory_allocator.c  xfixed_memory_allocator.h  xpalloc.c  xpalloc.h  xpico_allocator.c  xpico_allocator.h  xsalloc.c  xsalloc.h  xstack_allocator.c  xstack_allocator.h
picox/container/: xbyte_array.h  xcircular_buffer.h  xfifo.h  xfifo_buffer.c  xfifo_buffer.h  xintrusive_list.c  xintrusive_list.h  xlist.h  xmessage_buffer.h  xmsgbuf.h
picox/core/: xcompiler.h  xcore.h  xdebug.c  xdebug.h  xmemstream.c  xmemstream.h  xpreprocessor.h  xutils.h
picox/core/compiler/: xgcc.h
picox/core/detail/: compiler.h  debug.c  debug.h  memory.h  preprocessor.h  printf.c  printf.h  stream.c  stream.h  types.h  utils.h  xcompiler.h  xdebug.c  xdebug.h  xpreprocessor.h  xprintf.c  xprintf.h  xrandom.c  xrandom.h  xrtti.h  xstddef.h  xstdio.c  xstdio.h  xstdlib.c  xstdlib.h  xstream.c  xstream.h  xstring.c  xstring.h  xtime.c  xtime.h  xutils.c  xutils.h
picox/core/detail/compiler/: gcc.h  xgcc.h  xrenesas.h
picox/core/stdcompat/ca78k0r/: inttypes.h  limits.h  stdbool.h  stddef.h  stdint.h
picox/core/stdcompat/ccrl/: stdarg.h  stdbool.h  stddef.h
picox/filesystem/: xfatfs.c  xfatfs.h  xfile.c  xfile.h  xflib.c  xflib.h  xfpath.c  xfpath.h  xfs.c  xfs.h  xfscore.c  xfscore.h  xpath.c  xpath.h  xposixfs.c  xposixfs.h  xramfs.c  xramfs.h  xromfs.c  xromfs.h  xsinglefs.c  xsinglefs.h  xspiffs.c  xspiffs.h  xunionfs.c  xunionfs.h  xvfs.c  xvfs.h
picox/hal/: xgpio.c  xgpio.h  xi2c.c  xi2c.h  xpwm.c  xpwm.h  xspi.c  xspi.h  xuart.c  xuart.h
picox/misc/: xargparser.c  xargparser.h  xdebug.c  xdebug.h  xtokenizer.c  xtokenizer.h  xutils.h
picox/multitask/: xfiber.c  xfiber.h  xfiber_def.h  xvtimer.c  xvtimer.h
picox/string/: xdynamic_string.c  xdynamic_string.h  xstr.c  xstr.h
picox_external/: README.md
picox_external/Unity/: unity_internals.h
picox_external/config/: ffconf.h  spiffs_config.h  unity_config.h
picox_external/fatfs/: 00readme.txt
picox_external/minIni/: minGlue.c  minGlue.h  minIni.c
picox_external/sds/: sds.c  sds.h  sdsalloc.h
picox_external/spiffs/: spiffs.h  spiffs_cache.c  spiffs_check.c  spiffs_gc.c  spiffs_hydrogen.c  spiffs_nucleus.c  spiffs_nucleus.h
picox_external/uthash/: replace.sed  utarray.h  uthash.h  utlist.h  utmm.c  utmm.h  utringbuffer.h  utstring.h  utvector.c  utvector.h
test/: CMakeLists.txt  alltests.c  picox_config.h  picox_tests.c  picox_tests.pro  sds_test.c  test_minIni.c  test_sds.c  test_xargparser.c  test_xdynamic_string.c  test_xfalloc.c  test_xfatfs.c  test_xfifo_buffer.c  test_xfile.c  test_xfixed_allocator.c  test_xfpath.c  test_xfs.c  test_xintrusive_list.c  test_xmessage_buffer.c  test_xpalloc.c  test_xpico_allocator.c  test_xposixfs.c  test_xramfs.c  test_xsalloc.c  test_xsinglefs.c  test_xspiffs.c  test_xstack_allocator.c  test_xstr.c  test_xstream.c  test_xstring.c  test_xtokenizer.c  test_xunionfs.c  test_xutils.c  test_xvfs.c  testutils.c  testutils.h  xfifo_test.c  xlist_test.c  xmessage_buffer_test.c  xmsgbuf_test.c  (+3 more)
test/config/: spiffs_config.h  unity_config.h
test/glue/: fatfs_glue.c
tests/: CMakeLists.txt  picox_tests.c  picox_tests.pro  test_xdynamic_string.c  test_xfatfs.c  test_xfiber.c  test_xfiber_channel.c  test_xfiber_event.c  test_xfiber_mailbox.c  test_xfiber_mutex.c  test_xfiber_pool.c  test_xfiber_queue.c  test_xfiber_semaphore.c  test_xfiber_signal.c  test_xfifo_buffer.c  test_xfixed_allocator.c  test_xfpath.c  test_xintrusive_list.c  test_xpico_allocator.c  test_xprintf.c  test_xramfs.c  test_xromfs.c  test_xstdio.c  test_xstream.c  testutils.c  timer.c
tests/config/: ffconf.h  picox_config.h
tests/glue/: fatfs_glue.c
tests/romfs/foo/bar/: baz.txt
tools/: xbin2c.py  xrefactor.py  xromfs_builder.py
